workshop3/bggapp-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: bggappv1-deploy
   labels:
      app: bgg
      tier: backend
      version: v1
spec:
   replicas: 2
   selector:
      matchLabels: 
         app: bgg
         tier: backend
         version: v1
   minReadySeconds: 5
   strategy:
      type: RollingUpdate
      rollingUpdate:
         maxSurge: 25%
         maxUnavailable: 25%
   template:
      metadata:
         name: bggappv1-pod
         labels:
            app: bgg
            tier: backend
            version: v1
      spec:
         containers:
         - name: bggapp-container
           image: stackupiss/bgg-backend:v1
           args: 
           - --prefix
           - /v1
           ports:
           - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
   name: bggappv1-svc
   labels:
      app: bgg
      tier: backend
      version: v1
spec:
   type: ClusterIP
   selector:
      app: bgg
      tier: backend
      version: v1
   ports:
   - port: 8080
     targetPort: 3000
