workshop3/bggdb-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: bggdb-deploy
  labels:
    app: bgg
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: bgg
      tier: persistence

  template:
    metadata:
      name: bggdb-pod
      labels:
        app: bgg
        tier: persistence

    spec:
      containers:
      - name: bggdb-container
        image: stackupiss/bgg-database:v1
        imagePullPolicy: IfNotPresent
        ports: 
        - containerPort: 3306
---
---
apiVersion: v1
kind: Service
metadata:
  name: bggdb-svc
  labels: 
    app: bgg

spec:
  type: ClusterIP
  selector:
    app: bgg
  ports:
  - port: 3306
    targetPort: 3306
