workshop3/bggapp-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bgg-ing
  labels:
    app: bgg
spec:
  ingressClassName: nginx
  rules:
    - host: bgg-144.126.243.119.nip.io
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service: 
                name: bggappv1-svc
                port: 
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service: 
                name: bggappv2-svc
                port: 
                  number: 8080
---
